tests/cases/variables/ok/assignment-statement-payloads.ari
struct Counter {
  mut value: i64,
}

fn main() -> i64 {
  var total = 1;
  total += 4;
  total = total * 2;

  var counter = Counter { value: 3 };
  counter.value = total + 5;
  counter.value += 2;

  var values: [i64, 3] = [1, 2, 3];
  values[1] = counter.value;

  return total + counter.value + values[1];
}
