tests/cases/variables/errors/variables-tuple-pattern-rest-arity.ari
fn main() -> i64 {
  let (left, middle, .., right) = (1, 2);
  return left + middle + right;
}
